v1.7 - MORE FUN update
Features :
  -Everything is bigger and faster !
  -Light flashes for events (Shooting, teleporting and explosions)
  -Color correction, star colors and space color change from one stage to the next
  -Tweaked screenshake, game speed change and exposure for a better game feel.
  -More forgiving physics damages (allows easy asteroid-pushing :D)
  -The default gamemode is now infinitespace
  -The default weapon is now a powerfull shotgun
  -Overexposed colors become whiter. A very intense red will look orange, or yellow, and a very intense blue will look cyan.
Fixed :
  -Infinitespace now works properly, with objects that are too far coming back the other side
  -Better performance thanks to a higher asteroid minimum radius and default infinitespace
  -No more intricated asteroids and physics bugs.
Bugs :
  -Momentum of objects still not taken into account for physics

V1.6 - Interface update
Features :
  -New rendering system, an object is now a list of colors and polygons
  -New ship, thanks to this :)
  -New hitbox system, takes a list of points into account. Still not perfect, but does the job most of the time.
  -New pause menu, accesible by pressing p
  -Score is now displayed with big letters :)
  -The stage number too
  -Changed game scale and various values
Bugs :
  -«Advanced» hitbox performance hit. Can be disabled in the menu

V1.5 - Oldschool update
Features :
  -Oldschool mode is now available !
  -Too small asteroids are now kept as darker collisionless shrinking chunks instead of being despawned, allowing some nice visuals at almost no cost !
  -Irregular asteroids
Bugs :
  -modulos af asteroids do not appear irregular as they should
  -Still the angle.

V1.4
Features :
  -Yan now toggle and use infinitespace ! It is important to increase game_surface for it to be enjoyable.
  -Buttons to toggle on or off options such as : screenshake, dynamic camera, infinitespace, and mouse control
  -Asteroids now only spawn outside of screen